# MCMCSEDanalysis

./: MCMC2.0_run.py  MCMC2.0_update_catalog.py  README.md  README.rst  config.py  config.py.bak  kde.py  mcmc.py  mcmc2.py  mcmc_plots.py  mcmc_utils.py  plots.py  priors.py  pyproject.toml  requirements.txt  show_priors.py  synthetic_photometry.py
Tutorial/: Age.csv  Av.csv  Besançon_plus_GAIA_ONCFOV.csv  MCMC_SED_fitter.py  Mass.csv  ONC_catalogue.csv  mcmc.yaml
Tutorial/MCMC_analysis/samplers/: samplerID_42  samplerID_77  samplerID_8
Tutorial/Synthetic Photometry/: bt_settl_AGSS2009_isochrones_new.h5  bt_settl_AGSS2009_isochrones_new2.h5  bt_settl_AGSS2009_isochrones_new_acc.h5  bt_settl_AGSS2009_isochrones_new_acc_final.h5  bt_settl_AGSS2009_isochrones_temp.h5
Tutorial/analysis/samplers/: samplerID_35  samplerID_77  samplerID_8
docs/source/: Attribution.rst  Contact.rst  MCMC_analysis.rst  conf.py  index.rst  installation.rst  tutorials.rst
docs/source/tutorial/: tutorial.ipynb
docs/source/tutorials/: MCMC_SED_fitter.py  tutorial.ipynb
mcmcanalysis/: mcmc.py  mcmc_plots.py  mcmc_utils.py  show_priors.py
mcmcsedanalysis/: __init__.py  kde.py  mcmc.py  mcmc_analysis.yaml  mcmc_plots.py  mcmc_utils.py  priors.py  show_priors.py  synthetic_photometry.py
